fix filter collapse btn + cards bottom margin

--- a/blocks/accordion/__collapse-btn/accordion__collapse-btn.css
+++ b/blocks/accordion/__collapse-btn/accordion__collapse-btn.css
@@ -6,6 +6,8 @@
 	background-color: transparent;
 	cursor: pointer;
 
+	margin-right: 6px;
+
 	animation: rotate-down 0.5s;
 	transform: rotate(360deg);
 }
